@@ -1,9 +1,13 @@
 * Changelog
 
 ** Unreleased
+Introduces *Emacs 29.1* features support.
+
+*** Added:
+  - Global keybinding =C-c f r= to call =rename-visited-file= (since Emacs 29.1).
 
 *** Changed:
-- Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
+  - Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
 
 
 ** v2.2.0 - 2023-08-05
